# code-template

./: README.md  build.py  main.py  pyproject.toml
app/config/: config.json
src/: MainWindow.py
src/Functions/: Config.py  LogBase.py  ModuleLogger.py  SignalBus.py
src/UI/: SettingInterface.py
src/resources/: resources.qrc
src/resources/i18n/: MainWindow.TMP.zh_CN.ts  SettingInterface.TMP.zh_CN.ts  app_language.zh_CN.qm  app_language.zh_CN.ts
